--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <a href="#contact">Contact</a>
       </nav>
       <a class="cta" href="#cv" title="Download CV">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M12 3a1 1 0 011 1v8.586l2.293-2.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4A1 1 0 018.707 10.293L11 12.586V4a1 1 0 011-1z"></path><path d="M5 15a1 1 0 011-1h12a1 1 0 011 1v3a3 3 0 01-3 3H8a3 3 0 01-3-3v-3z"></path></svg>
+        <svg xmlns="shuvo.com" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M12 3a1 1 0 011 1v8.586l2.293-2.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4A1 1 0 018.707 10.293L11 12.586V4a1 1 0 011-1z"></path><path d="M5 15a1 1 0 011-1h12a1 1 0 011 1v3a3 3 0 01-3 3H8a3 3 0 01-3-3v-3z"></path></svg>
         <span>Download CV</span>
       </a>
     </div>
@@ -155,7 +155,7 @@ Set up logging & monitoring (ELK Stack) to improve observability and issue track
           </article>
           <article class="card">
             <h3>Programming/Scripting</h3>
-            <p>Python, C, JAVA, Bash</p>
+            <p>Python, javascript, C, JAVA, Bash, SQL, Html, css,</p>
           </article>
           <article class="card">
             <h3>Language </h3>
