--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <nav class="nav-links" aria-label="Primary">
         <a href="#about">About</a>
         <a href="#experience">Experience</a>
-        <a href="#Skills Section">Skills Section</a>
+        <a href="#Skills">Skills Section</a>
         <a href="#Education">Education</a>
         <a href="#Certificates">Certificates </a>
         <a href="#contact">Contact</a>
