--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <nav class="nav-links" aria-label="Primary">
         <a href="#about">About</a>
         <a href="#experience">Experience</a>
-        <a href="#Skills">Skills Section</a>
+        <a href="#Skills">Skills</a>
         <a href="#Education">Education</a>
         <a href="#Certificates">Certificates </a>
         <a href="#contact">Contact</a>
@@ -131,7 +131,7 @@ Set up logging & monitoring (ELK Stack) to improve observability and issue track
         </div>
       </section>
 
-      <section id="Skills Section" aria-labelledby="res-h">
+      <section id="Skills" aria-labelledby="res-h">
         <div class="section-head">
           <h2 id="res-h">Skills : </h2>
           <span class="sub">Shuvo </span>
