--- a/index.html
+++ b/index.html
@@ -100,40 +100,26 @@ DevOps and Devsecops .
         </div>
         <div class="timeline">
           <div class="t-item">
-            <h3> DevOps Engineer <span class="sub">in Saudi Telecommunication Company (STC)</span></h3>
-            <div class="t-meta">February 2025 — Present • Riyadh, kingdom of Saudia Arabia</div>
-            <p class="sub">Designed and implemented CI/CD pipelines using Jenkins and GitHub Actions to automate testing and deployment.
-
-Containerized applications with Docker and deployed them on Kubernetes clusters for scalability.
-
-Used Terraform to provision and manage AWS infrastructure (EC2, S3, VPC, IAM).
-
-Implemented monitoring and alerting with Prometheus & Grafana, improving system reliability.
-
-Worked with Linux servers for automation, user management, and system administration tasks.</p>
+            <h3> DevOps Engineer <span class="sub">in Future</span></h3>
+            <div class="t-meta">2025 — Present • Riyadh, kingdom of Saudia Arabia</div>
+            <p class="sub">Networking-Linux-Cloud-Devops-SRE-Security</p>
           </div>
           <div class="t-item">
-            <h3>Cloud Engineer<span class="sub"> in Saudi Electricity Company</span></h3>
-            <div class="t-meta">Jan 2024 — Feb 2025 • Riyadh, KSA</div>
-            <p class="sub">Assisted small teams in migrating workloads to AWS Cloud, ensuring cost optimization and high availability.
-
-Built automated backup and disaster recovery scripts using Bash & Python.
-
-Deployed web applications with NGINX load balancer and enabled auto-scaling for traffic spikes.
-
-Set up logging & monitoring (ELK Stack) to improve observability and issue tracking.</p>
+            <h3>Cloud Engineer<span class="sub"> in Future</span></h3>
+            <div class="t-meta">2025 — Present • Riyadh, KSA</div>
+            <p class="sub">Networking-Linux-Cloud-Devops-SRE-Security</p>
           </div>
           <div class="t-item">
-            <h3>Cloud intern<span class="sub"> in Bangladesh software ltd.</span></h3>
-            <div class="t-meta">2023 in Bangladesh </div>
-            <p class="sub">Networking-Linux-Cloud</p>
+            <h3>Site Reliability Engineer<span class="sub"> in Future</span></h3>
+            <div class="t-meta">2025 in Bangladesh </div>
+            <p class="sub">Networking-Linux-Cloud-Devops-SRE-Security</p>
           </div>
         </div>
       </section>
 
       <section id="Skills" aria-labelledby="res-h">
         <div class="section-head">
-          <h2 id="res-h">Skills : </h2>
+          <h2 id="res-h">Skills : Learning</h2> 
           <span class="sub">Shuvo </span>
         </div>
         <div class="grid cards">
@@ -187,7 +173,7 @@ Set up logging & monitoring (ELK Stack) to improve observability and issue track
 
       <section id="Certificates" aria-labelledby="teach-h">
         <div class="section-head">
-          <h2 id="teach-h">Certificates:</h2>
+          <h2 id="teach-h">Certificates: Learning</h2>
           <span class="sub">Shuvo</span>
         </div>
         <div class="grid cards">
